# kata-bank-ocr

./: LICENSE  README.md  kata-bank-ocr.cabal
src/: Main.hs  Reader.hs  Types.hs
test/: accounts.txt
