name:                kata-bank-ocr
version:             0.0.0.1
synopsis:            The Bank OCR Kata in Haskell.
license:             BSD3
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com
copyright:           Michael Beidler, 2015
build-type:          Simple
cabal-version:       >=1.10

executable kata-bank-ocr
  main-is:             Main.hs
  build-depends:
                base >=4.8 && <4.9
              , containers
              , lens
  hs-source-dirs:      src
  default-language:    Haskell2010